ajustes finos, sidebar fixada

--- a/index.html
+++ b/index.html
@@ -296,61 +296,65 @@
             </div>
         </div>
         <div class="spacer"></div>
-        <div class="sidebar">
-            <div class="profile"><img src="img/patrick.jpg" alt="">
-                <div>
-                    <a href="#" class="username">ptrk.c</a>
-                    patrick
+        <div class="sidebar-space">
+            <div class="sidebar">
+                <div class="profile"><img src="img/patrick.jpg" alt="">
+                    <div>
+                        <a href="#" class="username">ptrk.c</a>
+                        patrick
+                    </div>
+                    <a href="#" class="action">Switch</a>
                 </div>
-                <a href="#" class="action">Switch</a>
-            </div>
-            <div><span class="suggestions-title">Suggestions For You</span>
-                <a href="#" class="see-all">See All</a>
-            </div>
-            <div>
-                <a href="#"><img src="img/lsousa77.jpg" alt=""></a>
-                <div>
-                    <a href="#" class="username">lsousa77</a>
-                    Followed by sidemasi + 11 more
+                <div><span class="suggestions-title">Suggestions For You</span>
+                    <a href="#" class="see-all">See All</a>
                 </div>
-                <a href="#" class="action">Seguir</a>
-            </div>
-            <div>
-                <a href="#"><img src="img/joaorgo.jpg" alt=""></a>
                 <div>
-                    <a href="#" class="username">joaorgo</a>
-                    Followed by f.marroni + 10 more
+                    <a href="#"><img src="img/lsousa77.jpg" alt=""></a>
+                    <div>
+                        <a href="#" class="username">lsousa77</a>
+                        Followed by sidemasi + 11 more
+                    </div>
+                    <a href="#" class="action">Follow</a>
                 </div>
-                <a href="#" class="action">Seguir</a>
-            </div>
-            <div>
-                <a href="#"><img src="img/brunopencil.jpg" alt=""></a>
                 <div>
-                    <a href="#" class="username">bruno.pencil</a>
-                    Followed by thadddeus + 1 more
+                    <a href="#"><img src="img/joaorgo.jpg" alt=""></a>
+                    <div>
+                        <a href="#" class="username">joaorgo</a>
+                        Followed by f.marroni + 10 more
+                    </div>
+                    <a href="#" class="action">Follow</a>
                 </div>
-                <a href="#" class="action">Seguir</a>
-            </div>
-            <div>
-                <a href="#"><img src="img/armour.jpg" alt=""></a>
                 <div>
-                    <a href="#" class="username">armorousxd</a>
-                    Followed by mariajoana_98 + 1 more
+                    <a href="#"><img src="img/brunopencil.jpg" alt=""></a>
+                    <div>
+                        <a href="#" class="username">bruno.pencil</a>
+                        Followed by thadddeus + 1 more
+                    </div>
+                    <a href="#" class="action">Follow</a>
                 </div>
-                <a href="#" class="action">Seguir</a>
-            </div>
-            <div>
-                <a href="#"><img src="img/pawwwwwwwwwwww.jpg" alt=""></a>
                 <div>
-                    <a href="#" class="username">pawwwwwwwwwwww</a>
-                    Followed by thadddeus + 2 more
+                    <a href="#"><img src="img/armour.jpg" alt=""></a>
+                    <div>
+                        <a href="#" class="username">armorousxd</a>
+                        Followed by mariajoana_98 + 1 more
+                    </div>
+                    <a href="#" class="action">Follow</a>
                 </div>
-                <a href="#" class="action">Seguir</a>
+                <div>
+                    <a href="#"><img src="img/pawwwwwwwwwwww.jpg" alt=""></a>
+                    <div>
+                        <a href="#" class="username">pawwwwwwwwwwww</a>
+                        Followed by thadddeus + 2 more
+                    </div>
+                    <a href="#" class="action">Follow</a>
+                </div>
+                <div class="cinza"><a href="#">
+                        About • Help • Press • API • Jobs • Privacy • Terms • Locations • Top Accounts • Hashtags •
+                        Language
+                    </a></div>
+                <div class=" cinza">© 2021 INSTAGRAM FROM FACEBOOK</div>
             </div>
-            <div class="cinza"><a href="#">
-                    About • Help • Press • API • Jobs • Privacy • Terms • Locations • Top Accounts • Hashtags • Language
-                </a></div>
-            <div class=" cinza">© 2021 INSTAGRAM FROM FACEBOOK</div>
+
         </div>
     </div>
     <div class="navbar">
